# tasks

./: .gitignore  LICENSE  build.sh  logger.go  main.go  main_test.go  pyproject.toml  readme.md  show.go  task.go  task_fn.go  task_io.go  task_test.go
task/: config.py  dbactions.py  reports.py  task.py
tasks/: config.py  dbactions.py  main.py  reports.py  tasks.py
