
[tool.poetry]
name = "tasks"
version = "2.0.1"
description = "A simple command-line task list"
authors = ["Marcus Kazmierczak <marcus@mkaz.com>"]
license = "MIT"
readme = "readme.md"
keywords = ["todo"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
appdirs = ">=1.4"
python = ">=3.10"
rich = ">=13.3"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"
mypy = "^1.0.1"

[tool.poetry.scripts]
tasks = 'tasks.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
pythonpath = "tasks"
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py310"
